# scion-int-p4

./: .gitignore  README.md  installation_notes.txt
VM/: install_docker.sh  setup.sh
scion/: README.md  demo  docker-compose-demo.yaml  docker-compose.yaml  helper.bash  int_table1.txt  int_table2.txt  int_table3.txt  int_table4.txt  int_table5.txt  int_table6.txt  topo
scion/scion_host/: Dockerfile
simple_switch/: Doxyfile  Makefile  README.md  simple_switch.py
simple_switch/control_plane/: README.md  bitstring.h  connection.cpp  connection.h  control_plane.cpp  control_plane.h  controller.h  p4_util.cpp  p4_util.h
simple_switch/control_plane/controllers/: default.cpp  default.h  mac_learn.cpp  mac_learn.h
simple_switch/control_plane/controllers/int/: addressConversion.h  commonInt.h  int.cpp  int.h  kafkaProducer.cpp  kafkaProducer.h  readIntTable.h  takeUint.h  tcpClient.cpp  tcpClient.h
simple_switch/control_plane/controllers/int/report/: Makefile  report.pb.cc  report.pb.h  report.proto
simple_switch/control_plane/tests/: Makefile  int_table2.txt  test_bitstring.cpp  test_int.cpp
simple_switch/data_plane/: int_switch.p4  l2_switch_grpc.p4
simple_switch/data_plane/headers/: common.p4  int.p4  scion.p4
simple_switch/data_plane/include/: general.p4  int_switch.p4  l2_switch.p4  parser.p4
simple_switch/data_plane/parser/: ethernetParser.p4  intParser.p4  ipv4Parser.p4  ipv6Parser.p4  scionParser.p4  udpParser.p4
simple_switch/int_switch/: Makefile
simple_switch/int_switch/controller/: CMakeLists.txt  main.cpp
simple_switch/l2_switch/: Makefile  README.md  l2_switch.p4
simple_switch/l2_switch/controller/: main.cpp
simple_switch/l2_switch_grpc/: Doxyfile  Makefile  README.md  l2_switch.p4
simple_switch/l2_switch_grpc/controller/: CMakeLists.txt  bitstring.h  common.h  controller.cpp  controller.h  main.cpp
telemetry/kafka/: README.md  compile_protobuf.sh  go.mod  go.sum  main.go
telemetry/kafka/benchmark/: go.mod  go.sum  main.go  main_modified.go
telemetry/kafka/example/: generator.go  go.mod  main.go
telemetry/kafka/report/: generator.go  go.mod  report.pb.go  report.proto
